--- a/src/Planner.css
+++ b/src/Planner.css
@@ -490,6 +490,10 @@ label.hamburger {
     width:100%;
   }
 }
+
+.blocksSche{
+  margin-top:-17px;
+}
 /*not used
 
 input.hamburger:checked ~ nav.primnav .secnav > li:nth-child(5) {
