--- a/src/Planner.css
+++ b/src/Planner.css
@@ -608,6 +608,26 @@ label.hamburger {
 .MuiTableCell-paddingNone{
   width:140px;
 }
+
+.preview{
+  width:100%;
+  margin:5px 0;
+}
+
+.previewDelete{
+  margin-top:5px!important;
+  color:red!important;
+}
+
+.previewName{
+  margin-right:5px!important;
+  width:200px;
+}
+
+.previewDuration{
+  margin-right:5px!important;
+  width:30px;
+}
 /*not used
 
 input.hamburger:checked ~ nav.primnav .secnav > li:nth-child(5) {
