--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,3 +11,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+*{
+  -webkit-font-smoothing: antialiased;
+  -webkit-overflow-scrolling: touch;
+}
